# KamerLink

./: LICENSE  README.MD
backend/: Cargo.toml  README.MD  example.env  openapi.json
backend/src/: errors.rs  lib.rs  main.rs  routes_builder.rs
backend/src/database/: mod.rs  schemas.rs
backend/src/database/schemas/: post.rs  user.rs
backend/src/middleware/: mod.rs
backend/src/rng/: mod.rs
backend/src/routes/: auth.rs  gamble.rs  mod.rs  request_builder.rs
backend/src/routes/api/: gamble.rs  mod.rs  post.rs  user.rs
backend/src/routes/api/post/: comment.rs  like.rs  points.rs  tags.rs
backend/src/test_utils/: mod.rs
backend/src/utils/: reset.rs
backend/src/validation/: mod.rs
docs/assets/other/: architecture_diagram.drawio
docs/codebase_docs/: BACKEND.MD  COMMANDS.MD  FRONTEND.MD
docs/codebase_docs/database_example/: kamerlink.users.json
docs/project_log/: DECISIONS.MD  PROJECT.MD  README.MD  WORK_LOG.MD
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: api.tsx  gamble.tsx  like.tsx  post.tsx  user.tsx
frontend/src/api/types/: api.d.ts
frontend/src/components/TiltedNavBar/: TiltedNavBar.tsx
frontend/src/components/animations/WithSmoothAppearance/: WithSmoothAppearance.module.css  WithSmoothAppearance.tsx
frontend/src/components/generic_components/Accordion/: Accordion.tsx
frontend/src/components/generic_components/ActionMenuButton/: ActionMenuButton.tsx
frontend/src/components/generic_components/Card/: Card.tsx
frontend/src/components/generic_components/ColorPicker/: ColorPicker.tsx
frontend/src/components/generic_components/CountButton/: CountButton.tsx
frontend/src/components/generic_components/CrystalButton/: CrystalButton.tsx
frontend/src/components/generic_components/Dropdowns/: Dropdown.tsx  MultiDropdown.tsx
frontend/src/components/generic_components/InDevelopmentHeader/: InDevelopmentHeader.tsx
frontend/src/hooks/: useAuthenticatedUser.tsx  useScrollToBottom.tsx
frontend/src/pages/: home.tsx  leaderboard.tsx  posts.tsx  redirect.tsx  secret.tsx  vragen.tsx
frontend/src/pages/REPLACEMENTS/: README.MD  email_not_verified.tsx  generic_replacement.tsx  invalid_email.tsx  loading.tsx  not_found.tsx  not_logged_in.tsx  unexpected_error.tsx  user_banned.tsx
frontend/src/pages/posts/: view.tsx
frontend/src/pages/user/: PostPage.tsx  postpage.tsx  profile.tsx
frontend/src/types/: api.d.ts
(+33 files in other folders)
