[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] } 
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
tower-http = { version = "0.6.6", features = ["cors"] }
http = "1.3.1"
mongodb = "3.2.4"
dotenv = "0.15"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
urlencoding = "2.1.3"
anyhow = "1.0.98"